Fix 'other environmental actions' column spacing - closes #168

--- a/app/views/artifact/styles.styl
+++ b/app/views/artifact/styles.styl
@@ -108,6 +108,7 @@ body.artifact
   .actions
     margin-left gd(1) !important
   .timeline-item
-    padding-right gd(2)
+    padding-right gd(1)
+    padding-left gd(1)
     section:not(last-child)
       margin-bottom 3rem
